# SY25_MovementDetectionProject

./: .gitignore
camera/: Cargo.toml  memory.x  output.txt
camera/.cargo/: config.toml
camera/sim/: Cargo.toml
camera/sim/src/: main.rs
camera/src/: lib.rs
server/: server.py
